<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Memenator</string>
    <string name="log_out">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="images_album">memenator</string>
    <!-- Action Bar Tabs Items -->
    <string-array name="tabs_items">
        <item>Home</item>
        <item>Send Memes</item>
        <item>My Memes</item>
        <item>Gallery</item>
        <item>Samples</item>
        <item>Camera</item>
    </string-array>

    <string name="pen">Pen</string>
    <string name="rectangle">Rectangle</string>
    <string name="filled_rectangle">Filled Rectangle</string>
    <string name="circle">Circle</string>
    <string name="filled_circle">Filled Circle</string>
    <string name="text">Text</string>
    <string name="cut">Cut</string>

    <string name="filled">Filled</string>
    <string name="boarder">Border</string>

    <!-- Tab Item Icons -->
    <array name="tab_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_bluetooth</item>
        <item>@drawable/ic_photo</item>
        <item>@drawable/ic_gallery</item>
        <item>@drawable/ic_sample</item>
        <item>@drawable/ic_camera</item>
    </array>

    <!-- Content Description -->
    <string name="left_desc_list_item_icon">Left Navigation Item</string>
    <string name="right_desc_list_item_icon">Right Navigation Item</string>

    <!-- Messages -->
    <string name="picture_saved">Picture successfully saved!</string>
    <string name="no_back_camera">There is no Rear Camera</string>
    <string name="select_at_least_one_photo">Please select at least one image</string>
    <string name="selected_images_prefix">You\'ve selected Total </string>
    <string name="selected_images_suffix"> image(s).</string>
    <string name="problem_saving_photo">There was a problem during saving the photo...</string>
    <string name="problem_saving_photo2">There was a problem during closing created new image from edited picture</string>
    <string name="problem_creating_album">There was a problem during creating an album for Memes</string>
    <string name="successfully_selected_sample">Successfully selected Sample</string>
    <string name="successfully_selected_receive_image">Successfully selected Received Image</string>
    <string name="not_connected_wifi">Device cannot connect with devices through wifi. Code error = </string>
    <string name="connected_wifi">Device connected with devices through wifi. </string>

    <!--Application-->
    <string name="title_activity_take_picture">TakePictureActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="album_name">Memenator</string>
    <string name="write_text">Write text: </string>
    <string name="save_image">Save Image</string>
    <string name="publish_button">Publish</string>
    <string name="shared_preferences_file">MemenatorPrefsFile</string>
    <string name="path_key">savePath</string>
    <string name="user_name">user_name</string>
    <string name="user_id">user_id</string>
    <string name="select_button_gallery">Select Image</string>
    <string name="button_change_color">Change Color</string>
    <string name="button_change_font">Change Font</string>
    <string name="button_take_photo">Take Photo to edit</string>

    <!--Description Edit Option-->
    <string name="textOption">Write in text panel below text to be pasted into image.
        To paste text form text panel click on image</string>
    <string name="filledRectangleOption">To draw filled rectangle click on
    image and move finger to select size</string>
    <string name="rectangleOption">To draw rectangle click on the image
    and move finger to select size</string>
    <string name="filledCircleOption">To draw filled circle click on
    image and move finger to select size</string>
    <string name="circleOption">To draw circle click on the image
    and move finger to select size</string>
    <string name="cutOption">To cut a rectangle from image click on image
    and move finger to select size to be removed</string>
    <string name="penOption">To draw curves click on image and move finger to create shape</string>

    <!--Samples-->
    <string name="picture">Picture</string>
    <string name="show_intro">Press a thumbnail to display at larger size</string>
    <string name="select_info_sample">Click select button to select image to edit</string>
    <string-array name="samples_icons">
        <item>@drawable/doge</item>
        <item>@drawable/girlfriend</item>
        <item>@drawable/grumpy</item>
        <item>@drawable/janusz</item>
        <item>@drawable/science</item>
        <item>@drawable/seal</item>
        <item>@drawable/socially_awesome_penguin</item>
        <item>@drawable/sociallyakwardpenguin</item>
        <item>@drawable/stonedguy</item>
        <item>@drawable/success_kid</item>
    </string-array>


    <!--Bluetooth-->
    <string name="fid_people_description">Press button receive to listen images and send for sharing your image through bluetooth</string>
    <string name="last_received_images">Last received images</string>
    <string name="receive_btn">Receive Memes By Bluetooth</string>
    <string name="send_btn">Send Meme From Home By Bluetooth</string>
    <string name="cancel">Cancel</string>
    <string name="uuid">"390e5a54-a1d2-11e4-89d3-123b93f75cba"</string>

    <!--Facebook-->
    <string name="facebook_app_id">1541395889448486</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>

</resources>
